レスポンシブ終了

--- a/html/company.html
+++ b/html/company.html
@@ -30,11 +30,10 @@
     
     <nav class="header_nav">  
       <ul class="header_ul">
-        <li class="header_li"><a href="/company.html">会社概要</a></li>
-        <li class="header_li"><a href="/html/works.html">制作実績</a></li>
-        <li class="header_li"><a href="/html/success.html">成功事例</a></li>
-        <li class="header_li"><a href="/html/news.html">お知らせ</a></li>
-        <li class="header_li"><a href="/html/contact.html">お問合せ</a></li>
+        <li class="header_li"><a href="company.html">会社概要</a></li>
+        <li class="header_li"><a href="works.html">制作実績</a></li>
+        <li class="header_li"><a href="news.html">お知らせ</a></li>
+        <li class="header_li"><a href="contact.html">お問合せ</a></li>
       </ul>
     </nav>
   </div>
@@ -44,9 +43,11 @@
   </header>
 
   <main>
+
     <div class="underlayer_top_wrapper">
+
       <div class="underlayer_top_inner">
-        <div class="page_top_ttl">COMPANY<br><span class="underlayer_sub_ttl">会社概要</span></div>
+        <div class="page_top_ttl left_slide">COMPANY<br><span class="underlayer_sub_ttl">会社概要</span></div>
         <div class="page_top_txt">SARISARIは日々努力し続けるオーナー様に寄り添った集客提案を心がけています</div>
       </div>
     </div>
@@ -120,7 +121,7 @@
     </div>
 
     <div class="footer_inner">
-      <div class="footer_logo">SARISARI</div>
+      <div class="footer_logo"><a href="../index.html">SARISARI</a></div>
       <div class="footer_adress_box">
         <div class="footer_adress1">
           <p class="adress1_shopname">SARISARI&nbsp;東京〇〇支店</p>
@@ -134,19 +135,13 @@
     </div>
   </footer>
 
-  <script src="https://unpkg.com/scrollreveal"></script>
-    <!-- <script>
-      ScrollReveal().reveal('.works_wrapper_inner', { /*回転させたい要素のクラス名指定*/
-        rotate: { x: 0, y: 300, z: 0 }, // 横にくるっと
-        duration: 2000,
-        reset: true   
-    });
-    </script> -->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollify/1.0.21/jquery.scrollify.min.js" integrity="sha512-UyX8JsMsNRW1cYl8BoxpcamonpwU2y7mSTsN0Z52plp7oKo1u92Xqfpv6lOlTyH3yiMXK+gU1jw0DVCsPTfKew==" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/slide.js"></script>
+    <script src="../js/scroll.js"></script>
   </body>
-  </html>
+</html>
