--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <div class="header_logo logo">SARISARI<a href="index.html"></a></div> 
     <nav class="header_nav">  
       <ul class="header_ul">
-        <li class="header_li"><a href="../html/company.html">会社概要</a></li>
-        <li class="header_li"><a href="../html/works.html">制作実績</a></li>
-        <li class="header_li"><a href="../html/news.html">お知らせ</a></li>
-        <li class="header_li"><a href="../html/contact.html">お問合せ</a></li>
+        <li class="header_li"><a href="/html/company.html">会社概要</a></li>
+        <li class="header_li"><a href="/html/works.html">制作実績</a></li>
+        <li class="header_li"><a href="/html/news.html">お知らせ</a></li>
+        <li class="header_li"><a href="/html/contact.html">お問合せ</a></li>
       </ul>
     </nav>
   </div>
