ローディング修正

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2 class="company_wrapper_txt_ttl">理想と技術を兼ね備える<br>オーナーの想いを実現する</h2>
         <p class="company_wrapper_txt_inner1">女性の年間美容サロン利用頻度は減少の傾向にある近年。<br>いつでも綺麗でありたいと願う女性の理想をかなえる為に日々技術を磨いておられる熱意あるオーナー様の力になりたいとゆう願いから生まれた会社SARISARI。</p>
         <p class="company_wrapper_txt_inner2">そんな日々の努力にも関わらず個人経営や小規模サロンでは、なかなか集客が難しく適切な集客対策が不十分である事が多い傾向にあります。<br>早い段階での対策を実施すれば競合店との差別化もはかる事が出来る為、結果利益向上に繋がりやすい環境にシフトさせる事が出来るでしょう。</p>
-        <a href="../html/company.html" class="top_section_btn company_btn">会社情報へ</a>
+        <a href="html/company.html" class="top_section_btn company_btn">会社情報へ</a>
       </div>
     </div>
     <div class="box"></div>
@@ -110,7 +110,7 @@
         </li>
       </ul>
     </div>
-      <a href="../html/works.html" class="top_section_btn works_btn">制作事例へ</a>
+      <a href="html/works.html" class="top_section_btn works_btn">制作事例へ</a>
   </section>
 
   <section class="success">
@@ -145,7 +145,7 @@
               <div class="news_box_txt_date">2022.01.15</div>
               <div class="news_box_txt_inner">新規HP作成継続ありで<br>10%割引始めました！</div>
           </div>
-          <div class="news_box_pagenation"><a href="../html/news.html"><img src="img/矢印.jpg" alt=""></a></div>
+          <div class="news_box_pagenation"><a href="html/news.html"><img src="img/矢印.jpg" alt=""></a></div>
         </div>
       </div>
       
@@ -156,7 +156,7 @@
               <div class="news_box_txt_date">2022.05.10</div>
               <div class="news_box_txt_inner">東京〇〇支店設立</div>
             </div>
-          <div class="news_box_pagenation"><a href="../html/news.html"><img src="img/矢印.jpg" alt=""></a></div>
+          <div class="news_box_pagenation"><a href="html/news.html"><img src="img/矢印.jpg" alt=""></a></div>
         </div>
       </div>
 
@@ -167,7 +167,7 @@
             <div class="news_box_txt_date">2022.06.10</div>
             <div class="news_box_txt_inner">お盆休みのお知らせです</div>
           </div>
-          <div class="news_box_pagenation"><a href="../html/news.html"><img src="img/矢印.jpg" alt=""></a></div>
+          <div class="news_box_pagenation"><a href="html/news.html"><img src="img/矢印.jpg" alt=""></a></div>
         </div>
       </div>
     </article>
@@ -178,7 +178,7 @@
       <div class="contact_box_img"><img src="img/お問合せ-PC-img.jpg" alt=""></div>
         <div class="contact_txt">
           <div class="section_ttl">お問合せ<br><span class="contact_sub_ttl">contact</span></div>
-          <a href="../html/contact.html" class="top_section_btn works_btn contact_btn">詳しくはこちら！</a>
+          <a href="html/contact.html" class="top_section_btn works_btn contact_btn">詳しくはこちら！</a>
         </div>
     </div>
   </section>
@@ -190,7 +190,7 @@
     </div>
 
     <div class="footer_inner">
-      <div class="footer_logo"><a href="../index.html">SARISARI</a></div>
+      <div class="footer_logo"><a href="index.html">SARISARI</a></div>
 
       <div class="footer_adress_box">
         <div class="footer_adress1">
