卒業テスト最終提出

--- a/html/news.html
+++ b/html/news.html
@@ -56,6 +56,7 @@
 
         <div class="under_news_img"><img src="../img/お知らせimg.jpg" alt=""></div>
         <div class="under_news_txt">
+          <div class="under_news_txt_date">2022.01.15</div>
             <div class="under_news_txt_ttl">新規HP作成継続ありで10%割引始めました!</div>
             <p class="under_news_txt_inner">2022年より、新規顧客様向けに新しいサービスを開始しました。<br>新規でのHP制作をご依頼頂いたお客様、今まで継続依頼いただいていたお客様にどちらも受注価格の10%割引を3回分実地させていただきます!詳しくはお問合せかお電話で承っております。</p>
         </div>
